# iqtoolkit-analyzer

./: .gitignore  .gitmessage  BRANCH_PROTECTION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  Dockerfile  Makefile  README.md  ROADMAP.md  SECURITY.md  WEBSITE_SUMMARY.txt  package-lock.json  package.json  pyproject.toml  pytest-remote.ini  requirements.txt  test_remote_ollama.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml  labeler.yml
.github/workflows/: build-and-push.yml  codeql-analysis.yml  general-checks.yml  lint.yml  pr-automation.yml  release.yml  security.yml
api/: .env.example  docker-compose.yml  requirements.txt
api/app/: main.py
api/app/core/: config.py  llm_client.py  ollama_client.py
api/app/models/: schemas.py
api/app/routers/: analyze.py
api/app/templates/: config.default.yml
docs/: 5-minute-ollama-setup.md  ARCHITECTURE.md  configuration.md  dev-environment-setup.md  explain-analyzer-spec.md  faq.md  getting-started.md  index.md  mongodb-guide.md  monorepo.md  ollama-local.md  pg_examples.md  release-process.md  remote-ollama-testing.md
docs/rfcs/: RFC-002-explain-analyzer.md
docs/sample_logs/mongodb/: README.md
docs/sample_logs/mysql/: README.md
docs/sample_logs/postgresql/: README.md
docs/sample_logs/sqlserver/: README.md
iqtoolkit-contracts/: README.md  pyproject.toml
iqtoolkit-deployment/: README.md
iqtoolkit-iqai/: README.md  pyproject.toml
iqtoolkit_analyzer/: __init__.py
iqtoolkithub/: README.md  pyproject.toml
scripts/: setup-dev-environment.sh  setup-hooks.sh  test_ollama.py  validate-environment.sh
