[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iqtoolkit-analyzer"
version = "0.2.2a1"
description = "AI-powered multi-database performance analyzer for PostgreSQL and MongoDB with privacy-first intelligence"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Giovanni Martinez", email = "gio@iqtoolkit.ai"},
]
maintainers = [
    {name = "Giovanni Martinez", email = "gio@iqtoolkit.ai"},
]
keywords = [
    "postgresql",
    "mongodb",
    "database",
    "performance",
    "optimization",
    "sql",
    "ai",
    "openai",
    "slow-queries",
    "analyzer",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: SQL",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "ollama",
    "pandas>=2.0.0",
    "openai>=1.0.0",
    "python-dotenv>=0.19.0",
    "pyyaml>=6.0.0",
    "ruamel.yaml>=0.17.21",
    "tqdm>=4.0.0",
    "psycopg>=3.1.18"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.0.0",
    "ruamel.yaml>=0.17.0",
    "pip-tools>=7.0.0",
]

test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-mermaid2-plugin>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/iqtoolkit/iqtoolkit-analyzer"
Repository = "https://github.com/iqtoolkit/iqtoolkit-analyzer"
Issues = "https://github.com/iqtoolkit/iqtoolkit-analyzer/issues"
Changelog = "https://github.com/iqtoolkit/iqtoolkit-analyzer/releases"

[project.scripts]
iqtoolkit-analyzer = "iqtoolkit_analyzer.__main__:main"
slow-query-doctor = "iqtoolkit_analyzer.__main__:main"  # Legacy compatibility

[tool.setuptools.packages.find]
where = ["."]
include = ["iqtoolkit_analyzer*"]
exclude = ["tests*", "docs*", "sample_logs*"]

[tool.setuptools.package-data]
iqtoolkit_analyzer = ["py.typed"]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["iqtoolkit_analyzer"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# MyPy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["openai.*", "dotenv.*"]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=iqtoolkit_analyzer",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["iqtoolkit_analyzer"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

# Flake8 configuration (see setup.cfg)
# Flake8 doesn't support pyproject.toml configuration yet